adicionando footer e campo de contato

--- a/index.html
+++ b/index.html
@@ -260,5 +260,55 @@
             </div><!--facebook-chamada-->
         <div class="clear"></div>
     </section><!--social-->
+
+    <section class="contato">
+        <h2>Contato</h2>
+        <form>
+            <div class="form-wraper w100">
+                <span>Nome:</span>
+                <input type="text" name="name" id="name">
+            </div><!--form-wraper-->
+
+            <div class="form-wraper w50">
+                <span>Email:</span>
+                <input type="email" name="email" id="email">
+            </div><!--form-wraper-->
+
+            <div class="form-wraper w50">
+                <span>Telefone:</span>
+                <input type="text" name="phone" id="phone">
+            </div><!--form-wraper-->
+
+            <div class="form-wraper w100">
+                <span>Mensagem:</span>
+                <textarea name="message" id="message"></textarea>
+            </div><!--form-wraper-->
+
+            <div class="form-wraper w100" style="text-align: center;">
+                <input type="submit" value="Enviar">
+            </div><!--form-wraper-->
+            <div class="clear"></div>
+        </form>
+    </section><!--contato-->
+
+    <footer>
+        <div class="container">
+            <div class="footer-block">
+                <h2>Telefone</h2>
+                <p>(44) 9 9999-9999 <br> (44) 9 8888-8888</p>
+            </div><!--footer-block-->
+    
+            <div class="footer-block">
+                <h2>Horarios de atendimento</h2>
+                <p>Segunda a sexta das 9h às 18h</p>
+            </div><!--footer-block-->
+    
+            <div class="footer-block">
+                <h2>Endereço</h2>
+                <p>Av. Das flores, 444. Rua José jujuba sala 69 <br> Cep 99999999 - São paulo</p>
+            </div><!--footer-block-->
+            <div class="clear"></div>
+        </div><!--container-->
+    </footer>
 </body>
 </html>
